[package]
name = "distributed-services"
version = "0.1.0"
edition = "2021"


[dependencies]
# actix-web = "3"
# tokio = { version = "0.2", features = ["full"] }
bytes = "1"
pretty_env_logger = "0.4"
prost = "0.9"
tonic = "0.6"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync"] }


[[bin]]
name = "log-server"
path = "src/server.rs"

# [[bin]]
# name = "log-client"
# path = "src/client.rs"

[build-dependencies]
tonic-build = "0.6"
