[package]
name = "distributed-services"
version = "0.1.0"
edition = "2021"


[dependencies]
bytes = "1"
logging = { package = "log", version = "0.4" }
pretty_env_logger = "0.4"
prost = "0.9"
tonic = { version = "0.6", features = ["transport", "tls"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "fs", "sync"] }


[[bin]]
name = "log-server"
path = "src/server.rs"

# [[bin]]
# name = "log-client"
# path = "src/client.rs"

[build-dependencies]
tonic-build = "0.6"
